static/css/main.css
html {
  position: relative;
  min-height: 100%;
}

main > .container {
  padding: 60px 15px 35px;
}

body {

    background-image: linear-gradient( #E7BF9B, #FFFFFF);
    background-attachment: fixed;
    min-height: 75rem;
    font-family: Tahoma;
}

.navbar-logo {
    vertical-align: text-bottom;
}

.item-img {
    width: 200px;
    height: auto;
}


.bd-placeholder-img {
        font-size: 1.125rem;
        text-anchor: middle;
        -webkit-user-select: none;
        -moz-user-select: none;
        user-select: none;
      }

@media (min-width: 768px) {
        .bd-placeholder-img-lg {
          font-size: 3.5rem;
        }
      }

.ms-n5 {
    margin-left: -40px;
}

